feat: enhance page headers with SyloTea branding and add global footers across all pages.

--- a/checkout.html
+++ b/checkout.html
@@ -17,13 +17,15 @@
     </script>
 </head>
 
-<body class="min-h-screen p-4 flex items-center justify-center">
+<body class="min-h-screen p-4 flex flex-col items-center justify-center">
 
     <div class="glass-panel w-full max-w-lg rounded-2xl shadow-2xl overflow-hidden animate-fade-in relative z-10">
 
         <header class="gradient-header text-white p-6 text-center relative overflow-hidden">
-            <h1 class="text-2xl font-bold relative z-10">Delivery Details</h1>
-            <p class="text-green-100 relative z-10 text-sm">Please provide your info to complete the order</p>
+            <div class="absolute inset-0 opacity-10 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')]">
+            </div>
+            <h1 class="text-2xl font-bold relative z-10">SyloTea Checkout</h1>
+            <p class="text-green-100 relative z-10 text-sm">Secure Delivery Details</p>
         </header>
 
         <div class="p-8 bg-white">
@@ -76,6 +78,11 @@
         </div>
 
     </div>
+
+    <!-- Site Footer -->
+    <footer class="mt-8 text-center text-gray-500 text-sm font-medium pb-8">
+        <p>&copy; 2025 SyloTea, All Right Reserved.</p>
+    </footer>
 
     <!-- Success Modal -->
     <div id="success-modal"
