--- a/index.html
+++ b/index.html
@@ -29,16 +29,20 @@
     </script>
 </head>
 
-<body class="min-h-screen p-4 md:p-8 flex items-center justify-center">
+<body class="min-h-screen p-4 md:p-8 flex flex-col items-center justify-center">
 
     <div class="glass-panel w-full max-w-4xl rounded-2xl shadow-2xl overflow-hidden animate-fade-in relative z-10">
 
         <!-- Header -->
-        <header class="gradient-header text-white p-6 text-center relative overflow-hidden">
+        <header class="gradient-header text-white p-8 text-center relative overflow-hidden">
             <div class="absolute inset-0 opacity-10 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')]">
             </div>
-            <h1 class="text-3xl md:text-4xl font-bold mb-2 relative z-10 tracking-tight">Grocery Packages</h1>
-            <p class="text-green-100 relative z-10 font-light">Select your preferred size and essentials</p>
+            <div class="relative z-10">
+                <h2 class="text-green-200 text-sm font-bold uppercase tracking-widest mb-2">Welcome to</h2>
+                <h1 class="text-4xl md:text-5xl font-extrabold mb-2 tracking-tight">SyloTea</h1>
+                <p class="text-green-50 font-light text-lg">Premium Grocery Packages | Fresh & Fast</p>
+                <div class="w-16 h-1 bg-green-400 mx-auto mt-4 rounded-full opacity-70"></div>
+            </div>
         </header>
 
         <!-- Toastify CSS -->
@@ -83,9 +87,15 @@
                     <span>🛒</span> Checkout
                 </button>
             </div>
+
         </div>
 
     </div>
+
+    <!-- Site Footer -->
+    <footer class="mt-8 text-center text-gray-500 text-sm font-medium pb-8">
+        <p>&copy; 2025 SyloTea, All Right Reserved.</p>
+    </footer>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script type="module" src="js/script.js"></script>
