feat: Implement full grocery solution with product selection, cart, and checkout flow.

--- a/checkout.html
+++ b/checkout.html
@@ -81,7 +81,7 @@
 
     <!-- Site Footer -->
     <footer class="mt-8 text-center text-gray-500 text-sm font-medium pb-8">
-        <p>&copy; 2025 SyloTea, All Right Reserved.</p>
+        <p>&copy; <span id="year"></span> SyloTea, All Right Reserved.</p>
     </footer>
 
     <!-- Success Modal -->
