--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
 
     </div>
 
-    <!-- Site Footer -->
     <footer class="mt-8 text-center text-gray-500 text-sm font-medium pb-8">
-        <p>&copy; 2025 SyloTea, All Right Reserved.</p>
+        <p>&copy; <span id="year"></span> SyloTea, All Right Reserved.</p>
     </footer>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
