refactor: Remove collapsible navigation menu content and add minimum height to sticky navbar container across all pages.

--- a/summary.html
+++ b/summary.html
@@ -40,40 +40,12 @@
     </div>
 
     <!-- Navbar -->
-    <div class="container-fluid bg-white sticky-top">
+    <div class="container-fluid bg-white sticky-top min-h-16">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-2 py-lg-0">
                 <a href="index.html" class="navbar-brand">
                     <img class="img-fluid" src="img/logo.png" alt="Logo">
                 </a>
-                <button type="button" class="navbar-toggler ms-auto me-0" data-bs-toggle="collapse"
-                    data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav ms-auto">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Shop</a>
-                            <div class="dropdown-menu bg-light rounded-0 m-0">
-                                <a href="tea.html" class="dropdown-item">🍵 Tea</a>
-                                <a href="spices.html" class="dropdown-item">🌿 Spices</a>
-                                <a href="nuts-and-others.html" class="dropdown-item">🥜 Nuts & Seeds</a>
-                                <a href="oil.html" class="dropdown-item">🫒 Oil</a>
-                                <a href="honey.html" class="dropdown-item">🍯 Honey</a>
-                                <a href="sugar-and-jaggery.html" class="dropdown-item">🍚 Sugar & Jaggery</a>
-                                <a href="ghee.html" class="dropdown-item">🧈 Ghee</a>
-                                <a href="dates.html" class="dropdown-item">🌴 Dates</a>
-                                <a href="rice.html" class="dropdown-item">🍚 Rice</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border-start ps-4 d-none d-lg-block">
-                        <a href="https://wa.me/message/2JOFIELTGEQYK1">Order <i class="fa fa-shopping-cart"></i></a>
-                    </div>
-                </div>
             </nav>
         </div>
     </div>
